# pynoza

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  EPFL_logo.ipynb  LICENSE  MANIFEST.IN  README.md  install.sh  pynoza.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: master.yml
applications/EPFL_logo/: epfl_logo.py  integration_comparison.py  logos.sh
applications/finite_dipole/: finite_dipole.sh
applications/ira/: HIRA.py  hira.sh  hira.slurm.sh  mikheev.py  mikheev.sh  postprocessing.py
applications/lightning/: launch_on_servers.py  lightning.py  lightning.sh  lightning_direct.py  lightning_inverse.py  manage_servers.py
docs/source/: conf.py  index.rst
funknoza/: copying.sh  field_plot.m  field_to_num.m  frequency_domain.nb  funknoza.slurm.sh  gCaching.wls  parameters.csv  time_domain.m  time_domain.nb  time_domain_v2.nb  time_domain_v3.m  time_domain_v3.nb
rust/: Cargo.toml
rust/src/: helpers.rs  lib.rs  main.rs
speenoza/: Cargo.toml
speenoza/data/: test.csv
speenoza/src/: helpers.rs  lib.rs  main.rs
src/: lib.rs
src/pynoza/: __init__.py  from_mathematica.py  helpers.py  inverse_problem.py  pynoza.py  solution.c  solution.py  solution.pyx  spherical_to_cartesian.nb
src/pynoza.egg-info/: PKG-INFO  SOURCES.txt
src/pynoza_eliasleboudec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: EPFL_logo.ipynb  HIRA.ipynb  HIRA.py  data_mikheev.py  demo_EPFL_logo.py  double_exponential.nb  dump.pickle  epfl_logo.py  exp_emtr.py  finite_dipole.sh  from_mathematica.py  hira.sh  hira.slurm.sh  integration_comparison.py  inverse_problem.py  lightning.bash  lightning.py  lightning.sh  lightning.zsh  mikheev.py  mikheev.sh  plot_directivity.py  postprocessing.py  profiling.py  setup.py  spherical_int.pyx  synthetic.py  test_EPFL_logo.py  test_disc.sh  test_finite_dipole.py  test_frequency_domain.py  test_helpers.py  test_inverse_problem_dipole.py  test_moments_problem.py  test_rust_impl.py  test_separability.py  test_simple_example.py  test_spherical_to_cartesian.py  test_syntax.py  time_result.pickle  (+2 more)
tests/.job/: order-1-n_points-40-seed-0.job  order-1-n_points-40-seed-1.job  order-1-n_points-40-seed-10.job  order-1-n_points-40-seed-11.job  order-1-n_points-40-seed-12.job  order-1-n_points-40-seed-13.job  order-1-n_points-40-seed-14.job  order-1-n_points-40-seed-15.job  order-1-n_points-40-seed-2.job  order-1-n_points-40-seed-3.job  order-1-n_points-40-seed-4.job  order-1-n_points-40-seed-5.job  order-1-n_points-40-seed-6.job  order-1-n_points-40-seed-7.job  order-1-n_points-40-seed-8.job  order-1-n_points-40-seed-9.job  order-1-n_points-45-seed-0.job  order-1-n_points-45-seed-1.job  order-1-n_points-45-seed-10.job  order-1-n_points-45-seed-11.job  order-1-n_points-45-seed-12.job  order-1-n_points-45-seed-13.job  order-1-n_points-45-seed-14.job  order-1-n_points-45-seed-15.job  order-1-n_points-45-seed-2.job  order-1-n_points-45-seed-3.job  order-1-n_points-45-seed-4.job  order-1-n_points-45-seed-5.job  order-1-n_points-45-seed-6.job  order-1-n_points-45-seed-7.job  order-1-n_points-45-seed-8.job  order-1-n_points-45-seed-9.job  order-1-n_points-50-seed-0.job  order-1-n_points-50-seed-1.job  order-1-n_points-50-seed-10.job  order-1-n_points-50-seed-11.job  order-1-n_points-50-seed-12.job  order-1-n_points-50-seed-13.job  order-1-n_points-50-seed-14.job  order-1-n_points-50-seed-15.job  (+248 more)
tests/data/: Efield_at_2a_and_3a_lambdaOver2_v3.txt  data_mikheev_part_1.csv  data_mikheev_part_2.csv  globalem_order_1.txt  globalem_order_2.txt  globalem_v2_order_2.txt  globalem_v2_order_3.txt  opt-result-Mon May  8 17:41:42 2023.csv  opt-result-Mon May  8 17:42:07 2023.csv_params.pickle  opt-result-Mon May  8 17:44:29 2023.csv_params.pickle  opt-result-Mon May  8 18:26:47 2023.csv  opt-result-Mon May  8 18:30:01 2023.csv  opt-result-Mon May  8 18:30:01 2023.csv_params.pickle  opt-result-Mon May  8 18:32:18 2023.csv  opt-result-Mon May  8 18:32:18 2023.csv_params.pickle  opt-result-Mon May  8 18:32:19 2023.csv  opt-result-Mon May  8 18:32:19 2023.csv_params.pickle  opt-result-Mon May  8 18:32:22 2023.csv  opt-result-Mon May  8 18:32:22 2023.csv_params.pickle  opt-result-Mon May  8 18:32:26 2023.csv  opt-result-Mon May  8 18:32:26 2023.csv_params.pickle  opt-result-Mon May  8 18:32:27 2023.csv  opt-result-Mon May  8 18:32:27 2023.csv_params.pickle  opt-result-Mon May  8 18:32:40 2023.csv  opt-result-Mon May  8 18:32:40 2023.csv_params.pickle  opt-result-Mon May  8 18:32:41 2023.csv  opt-result-Mon May  8 18:32:41 2023.csv_params.pickle  opt-result-Mon May  8 18:32:43 2023.csv  opt-result-Mon May  8 18:32:43 2023.csv_params.pickle  (+913 more)
(+122 files in other folders)
