[project]
name = "pynoza"
version = "0.3.3"
dynamic = ["dependencies", "classifiers", "description", "readme", "urls", "authors", "requires-python"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = [
    "setuptools>=61.0",
    "Cython>=0.29.32",
    "setuptools-rust>=1.5.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
