[metadata]
name = pynoza
version = 0.0a0
author = Elias Le Boudec
author_email = elias.leboudec@epfl.ch
description = Computation of time-domain solutions of Maxwell's equations using the cartesian multipole expansion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eliasleb/pynoza
project_urls = https://github.com/eliasleb/pynoza
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
