[package]
name = "speenoza"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "speenoza"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
csv = "1.1.6"
itertools = "0.10.3"
factorial = "0.2.1"
pyo3 = "0.16.5"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]


